--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 							<div class="filter-dropdown">
 								<div class="selected"><span class="name">Filter:</span> <span class="val">Todos</span></div>
 								<ul>
-									<li data-filter="*">Todos</li><!--
+									<li data-filter="*">Todos</li>
 									<li data-filter=".3d">Audiovisual</li>
-									<li data-filter=".buildings">Musica</li>
+									<li data-filter=".buildings">Teoría Musical</li><!--
 									<li data-filter=".design">Sonido</li>
 									<li data-filter=".nature">Instrumentos</li>-->
 								</ul>
@@ -95,7 +95,7 @@
 					<div class="isotope isotope-3 row">
 							
 						<!-- Audiovisual item-->
-						<article class="portfolio isotope-item buildings design col-4">
+						<article class="portfolio isotope-item 3d col-4">
 							<a href="#" class="image" style="background-image: url(img/portfolio-images/1-p.jpg)"></a>
 							<div class="inner">
 								<header>
