--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				<div class="swiper swiper-container">
 					<div class="swiper-wrapper">
 						<div class="embed-container">
-							<iframe src="https://drive.google.com/file/d/1plQsTUX7mDevry4BR47-R1bXAlZR18dR/preview" width="640" height="480"></iframe>
+							<iframe src="https://drive.google.com/file/d/1plQsTUX7mDevry4BR47-R1bXAlZR18dR/preview" allowfullscreen"></iframe>
 						</div>
 					</div>
 					<!-- Flechas de navegación suprimidas -->
