--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>MCFA | Contenido Multimedia</title>
-		<meta name="keywords" content="Rayleigh, HTML5 Template, Minimalistic, Elegant, Creative, Clean">
-		<meta name="description" content="Rayleigh - Minimalistic and Elegant HTML Template">
+		<meta name="keywords" content="Talleres, contenido multimedia">
+		<meta name="description" content="Sitio donde encontrarás el contenido multimedia de MCFA.">
 		<meta name="author" content="R6 Themes">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
