--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 				<div class="portfolio-description">
 					<h3>Refuerzo sonoro</h3>
 					<p>¡Hablemos de Sonido!</p>
+					<p>Hermanos campistas, esperando que se encuentren bien, les saludamos a nombre de MCFA. Como ministerio los animamos a seguir adelante, siempre mirando a Cristo y poner en servicio de la obra todos los dones, talentos y capacidades. Recuerden todo viene de Dios y todo va para Dios, busquemos honrarle hoy y siempre.<br>Y todo lo que hagáis, hacedlo de corazón, como para el Señor y no para los hombres. Sabiendo que del Señor recibiréis la recompensa de la herencia, porque a Cristo el Señor servís.</br></p>
 					<div class="icon-text">
 						<i class="fa fa-calendar-o"></i>
 						<p>17 de Enero 2020</p>
