--- a/index.html
+++ b/index.html
@@ -150,7 +150,26 @@
 				<div class="portfolio-description">
 					<h3>Refuerzo sonoro</h3>
 					<p>¡Hablemos de Sonido!</p>
-					<p>Hermanos campistas, esperando que se encuentren bien, les saludamos a nombre de MCFA. Como ministerio los animamos a seguir adelante, siempre mirando a Cristo y poner en servicio de la obra todos los dones, talentos y capacidades. Recuerden todo viene de Dios y todo va para Dios, busquemos honrarle hoy y siempre.<br>Y todo lo que hagáis, hacedlo de corazón, como para el Señor y no para los hombres. Sabiendo que del Señor recibiréis la recompensa de la herencia, porque a Cristo el Señor servís.</br></p>
+					<p>Hermanos campistas, esperando que se encuentren bien, les saludamos a nombre de MCFA. Como ministerio los animamos a seguir adelante, siempre mirando a Cristo y poner en servicio de la obra todos los dones, talentos y capacidades. Recuerden todo viene de Dios y todo va para Dios, busquemos honrarle hoy y siempre.
+					<br>Y todo lo que hagáis, hacedlo de corazón, como para el Señor y no para los hombres. Sabiendo que del Señor recibiréis la recompensa de la herencia, porque a Cristo el Señor servís.</br>
+					<br>Colosenses 3:23-24</br>
+					<br> </br>
+					<br>Les dejamos a continuación las clases de “Hablemos de Sonido” realizadas en nuestro campamento de músicos. Desglosadas de la siguiente forma:</br>
+					<ul>
+						<li type="disc">Fundamentos de Sonido</li>
+						<li type="disc">Conectores</li>
+						<li type="disc">Microfonía</li>
+						<li type="disc">Parlantes</li>
+						<li type="disc">Amplificadores de potencia o Power</li>
+						<li type="disc">Consolas</li>
+						<li type="disc">Procesos y accesorios</li>
+						<li type="disc">Tips de monitoreo</li>
+	 				</ul>
+					<br></br>
+					<br>Esperamos que puedan poner en práctica estos consejos, en post de mejorar y buscar la excelencia, siempre recordando a quien le servimos.</br>
+					<br>Dios les Bendiga</br>
+					<br>Equipo de MCFA</br>
+					</p>
 					<div class="icon-text">
 						<i class="fa fa-calendar-o"></i>
 						<p>17 de Enero 2020</p>
