--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<h3>Refuerzo sonoro</h3>
 					<p>¡Hablemos de Sonido!</p>
 					<br>Hermanos campistas, esperando que se encuentren bien, les saludamos a nombre de MCFA. Como ministerio los animamos a seguir adelante, siempre mirando a Cristo y poner en servicio de la obra todos los dones, talentos y capacidades. Recuerden todo viene de Dios y todo va para Dios, busquemos honrarle hoy y siempre.</br>
-					<br>Y todo lo que hagáis, hacedlo de corazón, como para el Señor y no para los hombres. Sabiendo que del Señor recibiréis la recompensa de la herencia, porque a Cristo el Señor servís.</br>
+					<p>Y todo lo que hagáis, hacedlo de corazón, como para el Señor y no para los hombres. Sabiendo que del Señor recibiréis la recompensa de la herencia, porque a Cristo el Señor servís.</p>
 					<br>Colosenses 3:23-24</br>
 					<br>Les dejamos a continuación las clases de “Hablemos de Sonido” realizadas en nuestro campamento de músicos. Desglosadas de la siguiente forma:</br>
 					<ul>
